<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskTracker</string>
    <string name="preference_key_file">com.stenstrom.TaskTracker.PREFERENCE_FILE_KEY</string>

    <string name="tasks">My Tasks</string>
    <string name="task_name">Task</string>
    <string name="task_end">Due</string>
    <string name="task_pomodoros">Pomodoros</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_task">New Task</string>
    <string name="button_text">Send</string>
    <string name="button_sync">Sync</string>
    <string name="change_date">Set due date</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
    <string name="set_pomodoro">Pomodoro</string>
    <string name="set_done">Set done</string>
    <string name="no_pom_done">You have done no pomodoros yet</string>
    <string name="shared">Shared</string>
    <string name="choose_collab">Collaborators(optional)</string>
    <string name="pomodoros_own">You</string>
    <string name="pomodoros_tot">Total</string>
    <string name="pomodoros_done">Done</string>
    <string name="done_date">Done</string>
    <string name="collaborators">Collaborators</string>
    <string name="signup_error">Error: Your username or email already exist, pleas specify another:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_again">Password(Repeat)</string>
    <string name="email">Email</string>
    <string name="accept">accept</string>
    <string name="pomodoro_timer_B_long">Long break</string>
    <string name="pomodoro_timer_B_short">Short break</string>
    <string name="pomodoro_timer_B_pomodoro_time">Start</string>
    <string name="remove_task">Remove</string>

    <string name="time_pomodoro">25:00</string>
    <string name="time_long_break">10 : 00</string>
    <string name="time_short_break">5 : 00</string>
    <string name="sttop_timer">Stop</string>

    <string name="shortPassword">Password must be at least 3 characters</string>
    <string name="invalidEmailFormat">Enter a valid email address</string>
    <string name="invalidTaskname">Enter a task name</string>
    <string name="invalidPomodoros">Pomodoros must be more than 0</string>
    <string name="passwords_missmatch">The passwords are not the same</string>
    <string name="no_db_conn">Cannot save task. Fields missing, collaborator does not 
        exist or the internet connection is corrupt. Please try again</string>
    <string name="update_worked">It has now been updated</string>
    <string name="invalidCollabFormat">Your collaborator list need to be comma separated with alphanumeric</string>
    <string name="wait">Please wait</string>
    <string name="invalid_username_or_password">Username or password is wrong</string>
    <string name="emptyUsername">Enter a username</string>
    <string name="failed_to_load_tasks">Could not load tasks</string>
    <string name="need_comma_separation">Your collaborator list need to be comma separated with alphanumeric characters
        only
    </string>


</resources>
