<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:weightSum="1">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pomodoro_timer_B_pomodoro_time"
                    android:id="@+id/pomodoro_timer_B_start_pomodoro"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pomodoro_timer_B_short"
                    android:id="@+id/pomodoro_timer_B_short_break"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pomodoro_timer_B_long"
                    android:id="@+id/pomodoro_timer_B_long_break"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time_pomodoro"
            android:id="@+id/pomodoro_timer_TV_pomodoro_clock"
            android:layout_gravity="center_horizontal"
            android:textSize="70sp"
            />
</LinearLayout>