<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/task_background" >
 
    <TextView
        android:id="@+id/task_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:textColor="@color/header1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/task_name" />
 
    <!-- End label -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 <TextView
            android:id="@+id/end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:paddingBottom="2dip"
            android:text="@string/task_end"
            android:textColor="@color/header2"
            />
        <TextView
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginLeft="75dp"
            android:layout_alignParentTop="true"
            android:paddingBottom="2dip"
            android:text="@string/task_end"
            android:textColor="@color/text" />


       

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/pomodoros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="left"
            android:text="@string/task_pomodoros"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/list_item_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:minHeight="30dip"
 />

        <ImageView
            android:id="@+id/list_item_IM_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/pomodoros_tot"
            android:src="@drawable/accept"
            android:visibility="invisible" />

    </RelativeLayout>
 
</LinearLayout>